fix vita spacing

--- a/src/components/Graph/Entry/Entry.module.scss
+++ b/src/components/Graph/Entry/Entry.module.scss
@@ -14,4 +14,8 @@ $slotWidth: 40px;
 .content {
   flex: 1 1 auto;
   min-width: 0; // allow it to shrink
+
+  &__spaceBefore {
+    padding-top: $slotWidth;
+  }
 }
